--- a/src/networkScript.csproj
+++ b/src/networkScript.csproj
@@ -53,7 +53,7 @@
         <Compile Include="Expressions\MemberExpression.cs" />
         <Compile Include="Object.cs" />
         <Compile Include="Parsing\Parser.cs" />
-        <Compile Include="Parsing\PositionInfo.cs" />
+        <Compile Include="Parsing\LocationInfo.cs" />
         <Compile Include="Parsing\Token.cs" />
         <Compile Include="Parsing\TokenMatch.cs" />
         <Compile Include="Parsing\TokenType.cs" />
