--- a/src/networkScript.csproj
+++ b/src/networkScript.csproj
@@ -50,7 +50,7 @@
         <Compile Include="Error\TypeError.cs" />
         <Compile Include="Expressions\BinaryExpression.cs" />
         <Compile Include="Expressions\Identifier.cs" />
-        <Compile Include="Expressions\IdentifierList.cs" />
+        <Compile Include="Expressions\SymbolList.cs" />
         <Compile Include="Expressions\MemberExpression.cs" />
         <Compile Include="Expressions\TemplateExpression.cs" />
         <Compile Include="Object.cs" />
@@ -61,6 +61,7 @@
         <Compile Include="Parsing\TokenType.cs" />
         <Compile Include="Prototypes\BooleanPrototype.cs" />
         <Compile Include="Prototypes\NativeFunctionPrototype.cs" />
+        <Compile Include="Prototypes\NumberPrototype.cs" />
         <Compile Include="Statements\BlockStatement.cs" />
         <Compile Include="Expressions\CallExpression.cs" />
         <Compile Include="Context.cs" />
@@ -75,6 +76,7 @@
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Scope.cs" />
         <Compile Include="Statement.cs" />
+        <Compile Include="Symbol.cs" />
         <Compile Include="Value.cs" />
         <Compile Include="Statements\WhileStatement.cs" />
         <Compile Include="Function.cs" />
